manifests/workloads/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: mixed-os-othertest-deploy
  labels:
    app: mixed-os-othertest
spec:
  selector:
    matchLabels:
      app: mixed-os-othertest
  template:
    metadata:
      labels:
        app: mixed-os-othertest
    spec:
      containers:
        - name: mixed-os-othertest
          image: phillipsj/pstools:v0.2.0
          imagePullPolicy: Always
