manifests/workloads/pwsh.yaml
apiVersion: v1
kind: Service
metadata:
  name: pwsh
spec:
  selector:
    app: pwsh
  clusterIP: None
  ports:
    - name: foo # Actually, no port is needed.
      port: 1234
      targetPort: 1234
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pwshdep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pwsh
  template:
    metadata:
      labels:
        app: pwsh
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - windows
      containers:
        - name: pwsh
          image: mcr.microsoft.com/powershell:nanoserver
          command:
            - "pwsh.exe"
            - "-Command"
            - "sleep 3600"
