manifests/workloads/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: mixed-os-othertest-ingress-svc
  labels:
    app: mixed-os-othertest
spec:
  ports:
    - port: 8080
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: mixed-os-othertest
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mixed-os-othertest-ingress
spec:
  rules:
    - host: test1.com
      http:
        paths:
          - backend:
              service:
                name: mixed-os-othertest-ingress-svc
                port:
                  number: 8080
            pathType: ImplementationSpecific
